tests/conc/reject/parfor_assign.hi
fn main():
    acc := 0
    parallel for i in range(10):
        acc = acc + i
        if acc > 3:
            acc = 0
